# cppMasters

./: .gitignore
template/: CMakeLists.txt
template/include/: test.hpp
template/samples/: CMakeLists.txt  main.cpp
template/src/: CMakeLists.txt  test.cpp
week_1/testqual/: CMakeLists.txt  genTest.py  lex.l  lexer.hpp  testqual.cpp  tokens.hpp
week_2/cram/: CMakeLists.txt  README.MD
week_2/cram/include/: genEnum.hpp  interpreter.hpp  lexem.hpp  lexer.hpp  token.hpp  tokens.hpp
week_2/cram/samples/: CMakeLists.txt  main.cpp
week_2/cram/src/: CMakeLists.txt  interpreter.cpp
week_2/cram/src/lexer/: lex.l  lexer.cpp
week_2/cram/tests/: 1.cram  2.cram  3.cram
week_3/pattern_matching/: CMakeLists.txt
week_3/pattern_matching/include/: lexem.hpp  lexer.hpp  token.hpp
week_3/pattern_matching/samples/: CMakeLists.txt
week_3/pattern_matching/src/: CMakeLists.txt
week_3/pattern_matching/src/lexer/: lex.l  lexer.cpp
week_4/permanent_set/: CMakeLists.txt
week_4/permanent_set/include/: oneWayPersistent.hpp  oneWayPersistent_impl.cpp  oneWayPersistent_notString.cpp  oneWayPersistent_string.cpp
week_4/permanent_set/samples/: CMakeLists.txt  main.cpp
week_4/permanent_set/src/: CMakeLists.txt  oneWayPersistent.cpp
week_5/nth_prime/: main.cpp
week_6/physical_multiplication/: main.cpp  value.hpp
week_6/sort/: main.cpp  sort.hpp
